syntax = "proto3";

option java_package = "org.app.glimpse";
option java_multiple_files = true;

message Message {
  int64 id = 1;
  string content = 2;
  optional int64 senderId = 4;
  optional int64 receivedId = 5;
  int64 createdAt = 6;
  int64 updatedAt = 7;
}

message FriendUser {
  int64 id = 1;
  string name = 2;
  string bio = 4;
  string avatar = 5;
  double latitude = 6;
  double longitude = 7;
  repeated FriendUser friends = 8;
  int64 lastOnline = 9;
  int64 createdAt = 10;
  int64 updatedAt = 11;
}

message UserData {
  int64 id = 1;
  string name = 2;
  string password = 3;
  string bio = 4;
  string avatar = 5;
  double latitude = 6;
  double longitude = 7;
  repeated Message sentMessages = 8;
  repeated Message receivedMessages = 9;
  int64 createdAt = 10;
  int64 updatedAt = 11;
  repeated FriendUser friends = 12;
}
